# fairdata-etsin-qvain

./: .coveragerc  .dockerignore  .eslintignore  .flake8  .gitignore  .gitlab-ci.yml  .travis-deploy.sh  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  app.py  app_config.py  deploy-key.enc  docker-compose-standalone.yml  docker-compose-with-nginx-dev.yml  docker-compose-with-nginx-test.yml  docker-compose-with-nginx.yml  docker-compose.yml  elasticsearch.yml  flask.dockerfile  pyproject.toml  rabbitmq_client.py  requirements.txt  setup.py  sonar-project.properties  test_requirements.txt  tox.ini  utils.py  views.py
.githooks/: pre-commit
etsin_finder/: __init__.py  app.py  app_config.py  authentication.py  authentication_direct_proxy.py  authentication_fairdata_sso.py  authentication_sso.py  authorization.py  cache.py  catalog_record_converter.py  common_resources_v2.py  common_service_v2.py  converters.py  cr_service.py  cr_service_v2.py  download_api.py  download_metadata_service.py  download_resources.py  download_resources_v2.py  download_service.py  download_service_v2.py  email_utils.py  finder.py  flags.py  localization.py  log.py  log_utils.py  metax_api.py  qvain_light_dataset_schema.py  qvain_light_dataset_schema_v2.py  qvain_light_file_service.py  qvain_light_resources.py  qvain_light_resources_v2.py  qvain_light_rpc.py  qvain_light_rpc_v2.py  qvain_light_service.py  qvain_light_service_v2.py  qvain_light_utils.py  qvain_light_utils_v2.py  reindex_task.py  (+9 more)
etsin_finder/auth/: __init__.py  authentication.py  authentication_direct_proxy.py  authentication_fairdata_sso.py  authorization.py  saml_config.py
etsin_finder/elasticsearch/: elasticsearch_service.py  es_dataset_data_model.py  es_reindex.py
etsin_finder/frontend/: .babelrc  .eslintignore  .eslintrc  .npmrc  common.config.js  eslint.config.js  helpers.js  index.html  jest.config.js  jsconfig.json  package-lock.json  package.json  vite.config.js  vitest.config.js  webpack.config.js  webpack.config.shared.js  webpack.dev.js  webpack.dockerfile  webpack.prod.js
etsin_finder/resources/: __init__.py  common_resources.py  common_resources_v2.py  download_resources.py  download_resources_common.py  download_resources_v2.py  download_resources_v3.py  etsin_resources.py  ldap_resources.py  qvain_resources.py  qvain_resources_v2.py  qvain_rpc.py  qvain_rpc_v2.py
etsin_finder/schemas/: __init__.py  qvain_dataset_schema.py  qvain_dataset_schema_v2.py  services.py
etsin_finder/services/: __init__.py  base_service.py  common_service.py  common_service_v2.py  cr_service.py  cr_service_v2.py  download_service.py  (+8 more)
rabbitmq/: rabbitmq_client.py
tests/: __init__.py  basetest.py  contact_test.py  frontend_test_data.py  test_authentication.py  test_authorization.py  test_basic.py  test_cache.py  test_common_resources.py  test_contact_utils.py  test_crypto_utils.py  test_data.json  test_download.py  test_download_metadata.py  test_example.py  test_finder_utils.py  test_flags.py  test_ldap.py  test_localization.py  test_metax_v3_service.py  test_qvain_light_schema.py  test_qvain_lock.py  test_qvain_resources.py  test_qvain_schema.py  test_qvain_utils.py  test_rems.py  test_render_manifest.py  test_request_utils.py  test_resources.py  test_utils.py  utils.py  utils_test.py  utils_test_data.py
(+1834 files in other folders)
