[tool.poetry]
name = "fairdata-etsin-qvain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^2.2.2"
Flask-Mail = "^0.9.1"
marshmallow = "^3.19.0"
marshmallow-oneofschema = "^3.0.1"
PyJWT = "^2.6.0"
blinker = "^1.5"
cryptography = "^38.0.4"
gevent = "^22.10.2"
gunicorn = "^20.1.0"
pymemcache = "^4.0.0"
python-dateutil = "^2.8.2"
python3-saml = "^1.12.0"
PyYAML = "^6.0"
requests = "^2.27.1"
ldap3 = "^2.9.1"
webargs = "^8.2.0"
pytz = "^2022.7"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
ipdb = "^0.13.11"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
pydocstyle = "^6.1.1"
tox = "<4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
