[tool.poetry]
name = "fairdata-etsin-qvain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

# python versions exclude python 3.9.0 and 3.9.1
# because cryptography does not support them

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.0 || >3.9.1,<4.0.0"
Flask = "3.0.3"
Flask-Mail = "^0.10.0"
marshmallow = "^3.22.0"
marshmallow-oneofschema = "^3.0.1"
PyJWT = "2.9.0"
cryptography = "^44.0.0"
gevent = "<24"
gunicorn = "^23.0.0"
pymemcache = "^4.0.0"
python-dateutil = "^2.8.2"
python3-saml = "^1.12.0"
PyYAML = "^6.0"
requests = "^2.27.1"
ldap3 = "^2.9.1"
webargs = "^8.2.0"
pytz = "^2024.2"
pytest-cov = "*"
tox = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
ipdb = "^0.13.11"
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
pydocstyle = "^6.1.1"
tox = "^4.23.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
