[project]
name = "fairdata-etsin-qvain"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "Flask-Mail>=0.10.0,<0.11",
    "marshmallow>=3.22.0,<4",
    "marshmallow-oneofschema>=3.0.1,<4",
    "PyJWT==2.9.0",
    "cryptography (>=48.0.0,<49.0.0)",
    "gevent<24",
    "gunicorn>=23.0.0,<24",
    "pymemcache>=4.0.0,<5",
    "python-dateutil>=2.8.2,<3",
    "python3-saml>=1.12.0,<2",
    "PyYAML>=6.0,<7",
    "requests (>=2.34.2,<3.0.0)",
    "ldap3>=2.9.1,<3",
    "webargs>=8.2.0,<9",
    "pytz>=2024.2,<2025",
    "pytest-cov",
    "werkzeug (>=3.1.8,<4.0.0)",
]

[dependency-groups]
dev = [
    "flake8>=6.0.0,<7",
    "flake8-docstrings>=1.6.0,<2",
    "ipdb>=0.13.11,<0.14",
    "pytest>=8.3.4,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.10.0,<4",
    "requests-mock>=1.10.0,<2",
    "pydocstyle>=6.1.1,<7",
    "tox (>=4.54.0,<5.0.0)",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"
